hw5_lab8/tests/errors/sem_undeclared_var.kt
// EXPECT: semantic error — use of undeclared variable
fun main() {
    println(ghostVar)
}
